web api start up

--- a/AYP-BD/Application/Application.csproj
+++ b/AYP-BD/Application/Application.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <Folder Include="Common\" />
+    <Folder Include="Functions\Commands\" />
+    <Folder Include="Functions\Queries\" />
   </ItemGroup>
 
 </Project>
