--- a/AYP-BD/Domain/Domain.csproj
+++ b/AYP-BD/Domain/Domain.csproj
@@ -9,6 +9,15 @@
   <ItemGroup>
     <Folder Include="Enums\" />
     <Folder Include="Events\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
