--- a/AYP-BD/WebAPI/appsettings.json
+++ b/AYP-BD/WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=AYPDB;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
