register mediatr, test command, DI fixes, prepared test db sets and cfgs (users, role)

--- a/AYP-BD/WebAPI/appsettings.json
+++ b/AYP-BD/WebAPI/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "Default": "Server=(localdb)\\MSSQLLocalDB;Database=AYPDB;Trusted_Connection=True"
   },
+  "Authentication": {
+    "JwtKey": "PRIVATE_KEY_DONT_SHARE",
+    "JwtExpireDays": 30,
+    "JwtIssuer": "http://aypbd.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
