--- a/AYP-BD/Application/Application.csproj
+++ b/AYP-BD/Application/Application.csproj
@@ -12,7 +12,6 @@
 
   <ItemGroup>
     <Folder Include="Common\" />
-    <Folder Include="Functions\Commands\" />
     <Folder Include="Functions\Queries\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Mappings\" />
@@ -24,6 +23,8 @@
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="FluentValidation" Version="10.4.0" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.4" />
