repo base added

--- a/AYP-BD/WebAPI/appsettings.json
+++ b/AYP-BD/WebAPI/appsettings.json
@@ -3,7 +3,7 @@
     "Default": "Server=(localdb)\\MSSQLLocalDB;Database=AYPDB;Trusted_Connection=True"
   },
   "Authentication": {
-    "JwtKey": "PRIVATE_KEY_DONT_SHARE",
+    "JwtKey": "PRIVATE_KEY_DONT_SHARE_Y",
     "JwtExpireDays": 30,
     "JwtIssuer": "http://aypbd.com"
   },
