--- a/AYP-BD/Domain/Domain.csproj
+++ b/AYP-BD/Domain/Domain.csproj
@@ -3,11 +3,10 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <!--<Nullable>enable</Nullable>-->
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Enums\" />
     <Folder Include="Events\" />
     <Folder Include="Interfaces\" />
   </ItemGroup>
