--- a/AYP-BD/Infrastructure/Infrastructure.csproj
+++ b/AYP-BD/Infrastructure/Infrastructure.csproj
@@ -25,8 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Repositories\" />
-    <Folder Include="Validators\" />
+    <Folder Include="Common\" />
+    <Folder Include="Data\Interfaces\" />
   </ItemGroup>
 
 </Project>
