--- a/AYP-BD/WebAPI/appsettings.json
+++ b/AYP-BD/WebAPI/appsettings.json
@@ -5,7 +5,8 @@
   "Authentication": {
     "JwtKey": "PRIVATE_KEY_DONT_SHARE_Y",
     "JwtExpireDays": 30,
-    "JwtIssuer": "http://aypbd.com"
+    "JwtIssuer": "http://aypbd.com",
+    "JwtExpTime": 30
   },
   "Logging": {
     "LogLevel": {
