set up for request handler, fixes in claims, code clean up, user model changes

--- a/AYP-BD/WebAPI/appsettings.json
+++ b/AYP-BD/WebAPI/appsettings.json
@@ -15,5 +15,7 @@
     }
   },
   "DefaultPassword": "password",
+  "SteamApiKey": "8EB0B4C633B8912ECE80250702C46B68",
+  "BaseSteamCommunityUrl": "https://api.steampowered.com/",
   "AllowedHosts": "*"
 }
