--- a/AYP-BD/Infrastructure/Infrastructure.csproj
+++ b/AYP-BD/Infrastructure/Infrastructure.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <Folder Include="Common\" />
     <Folder Include="Data\Interfaces\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
