--- a/AYP-BD/WebAPI/appsettings.json
+++ b/AYP-BD/WebAPI/appsettings.json
@@ -17,5 +17,6 @@
   "DefaultPassword": "password",
   "SteamApiKey": "8EB0B4C633B8912ECE80250702C46B68",
   "BaseSteamCommunityUrl": "https://api.steampowered.com/",
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "StatsNames": "total_kills_ak47,total_kills_m4a1,total_kills_aug,total_kills_sg556,total_kills_famas,total_kills_galilar, total_kills_awp,total_kills_g3sg1,total_kills_scar20,total_kills_ssg08,total_kills_mac10,total_kills_mp7,total_kills_mp9,total_kills_p90,total_kills_bizon,total_kills_ump45,total_kills_hkp2000,total_kills_glock,total_kills_p250,total_kills_tec9,total_kills_fiveseven,total_kills_deagle,total_kills_mag7,total_kills_nova,total_kills_sawedoff,total_kills_xm1014,total_kills_m249,total_kills_negev"
 }
